#18 display list of all transactions (#25)
#18 add load and display transaction functionality
