# server/src/main/kotlin/com/github/simonhauck/budgetturtle/server/transaction/adapter/db/TransactionRepository.kt
@@ -1,9 +1,12 @@
 package com.github.simonhauck.budgetturtle.server.transaction.adapter.db
 
 import arrow.core.Either
+import com.github.simonhauck.budgetturtle.server.core.db.sortByDescendingNestedProperties
+import com.github.simonhauck.budgetturtle.server.core.db.toObjectId
 import com.github.simonhauck.budgetturtle.server.transaction.domain.model.Transaction
+import com.github.simonhauck.budgetturtle.server.transaction.domain.model.TransactionDetails
 import com.mongodb.client.MongoDatabase
-import org.litote.kmongo.getCollection
+import org.litote.kmongo.*
 import org.springframework.stereotype.Component
 
 @Component
@@ -19,5 +22,20 @@ class TransactionRepository(
             { "Some or all documents could not be imported" },
             { transactions }
         )
+    }
+
+    fun getLatestTransactionForUser(
+        userId: String,
+        requestedAmount: Int,
+        lastSeenId: String?
+    ): List<Transaction> {
+        val lastSeenIdObj = lastSeenId?.toObjectId<Transaction>() ?: newId()
+
+        return database
+            .getCollection<Transaction>()
+            .find(Transaction::userId eq userId, Transaction::id lt lastSeenIdObj)
+            .sortByDescendingNestedProperties(Transaction::details, TransactionDetails::date)
+            .limit(requestedAmount)
+            .toList()
     }
 }
